--- a/index.html
+++ b/index.html
@@ -506,12 +506,14 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#resume">Resume</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
+    
 
     <!-- Hero Section -->
     <section id="home" class="hero">
@@ -551,6 +553,18 @@
             </div>
         </div>
     </section>
+    <!-- Resume Section -->
+<section id="resume" class="section">
+    <h2 class="section-title animate-on-scroll">Resume</h2>
+    <div class="about-content animate-on-scroll" style="grid-template-columns: 1fr;">
+        <div class="about-text" style="text-align: center;">
+            <p>
+                Download my latest resume to learn more about my education, experience, and technical skills.
+            </p>
+            <a href="https://drive.google.com/file/d/14GSKMFBL_YypeT_Kpknm7Xua8m680Dzk/view?usp=sharing" class="cta-button" download>Download Resume </a>
+        </div>
+    </div>
+</section>
 
     <!-- Skills Section -->
     <section id="skills" class="section">
@@ -590,6 +604,7 @@
                     <span class="skill-tag">Algorithms</span>
                     <span class="skill-tag">DBMS</span>
                     <span class="skill-tag">Operating Systems</span>
+                    <span class="skill-tag">Object-Oriented Programming</span>
                 </div>
             </div>
         </div>
